style: add `.break-word` class to break words
Related to #656

--- a/packages/shared/src/styles/utilities.css
+++ b/packages/shared/src/styles/utilities.css
@@ -16,6 +16,10 @@
   text-overflow: ellipsis;
 }
 
+.break-word {
+  word-break: break-word;
+}
+
 .no-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
