--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -327,3 +327,14 @@ details {
     }
   }
 }
+details.right-icon {
+  & summary .icon {
+    --tw-rotate: 90deg;
+  }
+
+  &[open] {
+    & summary .icon {
+      --tw-rotate: 180deg;
+    }
+  }
+}
