fix: Hotfix the search bar position being off

--- a/packages/shared/src/styles/components/menu.css
+++ b/packages/shared/src/styles/components/menu.css
@@ -12,6 +12,7 @@
   }
 
   &.menu-secondary {
+    @apply transform-none;
     & .react-contexify__item__content {
       @apply text-theme-label-primary;
 
