--- a/packages/shared/src/components/comments/comments.module.css
+++ b/packages/shared/src/components/comments/comments.module.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Fira+Mono);
+
 .commentBox {
   & a:not(:global(.commentAuthor)) {
     color: var(--theme-label-link);
@@ -29,7 +31,7 @@
       @apply typo-body italic pl-7 my-8 border-l border-theme-divider-secondary;
     }
     & :where(pre) {
-      @apply bg-theme-divider-quaternary py-8 px-6 my-8 rounded-12 border border-theme-divider-quaternary;
+      @apply relative bg-theme-divider-quaternary py-8 px-6 my-8 rounded-12 border border-theme-divider-quaternary;
     }
     & :not(pre) > code {
       @apply bg-theme-divider-quaternary border border-theme-divider-quaternary px-2 py-1 mx-1 rounded-6;
@@ -63,6 +65,83 @@
     }
     & >:where(:last-child) {
       @apply mb-0;
+    }
+    & :where(pre) :global(:where(.hljs-comment,
+    .hljs-title)) {
+      color: #989498;
+    }
+    & :where(pre) :global(:where(.hljs-variable,
+    .hljs-attribute,
+    .hljs-tag,
+    .hljs-regexp,
+    .ruby .hljs-constant,
+    .xml .hljs-tag .hljs-title,
+    .xml .hljs-pi,
+    .xml .hljs-doctype,
+    .html .hljs-doctype,
+    .css .hljs-id,
+    .css .hljs-class,
+    .css .hljs-pseudo)) {
+      color: #dd464c;
+    }
+    & :where(pre) :global(:where(.hljs-number,
+    .hljs-preprocessor,
+    .hljs-built_in,
+    .hljs-literal,
+    .hljs-params,
+    .hljs-constant)) {
+      color: #fd8b19;
+    }
+    & :where(pre) :global(:where(.ruby .hljs-class .hljs-title,
+    .css .hljs-rules .hljs-attribute)) {
+      color: #fdcc59;
+    }
+    & :where(pre) :global(:where(.hljs-string,
+    .hljs-value,
+    .hljs-inheritance,
+    .hljs-header,
+    .ruby .hljs-symbol,
+    .xml .hljs-cdata)) {
+      color: #8fc13e;
+    }
+    & :where(pre) :global(:where(.css .hljs-hexcolor)) {
+      color: #149b93;
+    }
+    & :where(pre) :global(:where(.hljs-function,
+    .python .hljs-decorator,
+    .python .hljs-title,
+    .ruby .hljs-function .hljs-title,
+    .ruby .hljs-title .hljs-keyword,
+    .perl .hljs-sub,
+    .javascript .hljs-title,
+    .coffeescript .hljs-title)) {
+      color: #1290bf;
+    }
+    
+    & :where(pre) :global(:where(.hljs-keyword,
+    .javascript .hljs-function)) {
+      color: #c85e7c;
+    }
+    & :where(pre) :global(:where(.hljs)) {
+      display: block;
+      background: #322931;
+      color: #b9b5b8;
+      padding: 0.5em;
+      font-family: "Fira Mono", Menlo, Monaco, "Lucida Console","Courier New", Courier, monospace;
+      font-size: 16px;
+      line-height: 1.375;
+      direction: ltr;
+      text-align: left;
+      word-spacing: normal;
+    }
+    & :where(pre) :global(:where(.coffeescript .javascript,
+    .javascript .xml,
+    .tex .hljs-formula,
+    .xml .javascript,
+    .xml .vbscript,
+    .xml .css,
+    .xml .hljs-cdata)) {
+      opacity: 0.5;
     }
   }
 }
