--- a/packages/shared/src/components/markdown.module.css
+++ b/packages/shared/src/components/markdown.module.css
@@ -1,6 +1,125 @@
-.commentBox {
-  & a:not(:global(.commentAuthor)) {
-    color: var(--theme-label-link);
-    word-break: break-all;
+.markdown {
+  & :where(h1) {
+    @apply font-bold typo-title2 mt-16 mb-8;
+  }
+  & :where(h2) {
+    @apply font-bold typo-title3 mt-12 mb-7;
+  }
+  & :where(h3) {
+    @apply font-bold typo-headline mt-8 mb-6;
+  }
+  & :where(h4) {
+    @apply typo-headline mt-6 mb-5;
+  }
+  & :where(h5) {
+    @apply text-theme-label-tertiary font-bold typo-body mt-6 mb-4;
+  }
+  & :where(h6) {
+    @apply text-theme-label-tertiary font-bold mt-4 mb-3;
+  }
+  & :where(p) {
+    @apply my-8;
+  }
+  & :where(blockquote) {
+    @apply typo-body italic pl-7 my-8 border-l border-theme-divider-secondary;
+  }
+  & :where(pre) {
+    @apply relative bg-theme-divider-quaternary py-8 px-6 my-8 rounded-12 border border-theme-divider-quaternary;
+  }
+  & :not(pre) > code {
+    @apply bg-theme-divider-quaternary border border-theme-divider-quaternary px-2 py-1 mx-1 rounded-6;
+  }
+  & :where(ul) {
+    @apply list-disc my-8 pl-8;
+  }
+  & :where(ol) {
+    @apply list-decimal my-8 pl-8;
+  }
+  & :where(li) {
+    @apply my-2 pl-2;
+  }
+  & ::marker {
+    @apply text-theme-label-secondary;
+  }
+  & :where(ul ul, ul ol, ol ul, ol ol) {
+    @apply my-2;
+  }
+  & :where(a) {
+    @apply hover:underline;
+  }
+  & :where(hr) {
+    @apply border-theme-divider-secondary my-10;
+  }
+  & :where(img) {
+    @apply rounded-16;
+  }
+  & > :where(:first-child) {
+    @apply mt-0;
+  }
+  & > :where(:last-child) {
+    @apply mb-0;
+  }
+  & :where(pre) :global(:where(.hljs-comment, .hljs-title)) {
+    color: #989498;
+  }
+  &
+    :where(pre)
+    :global(:where(.hljs-variable, .hljs-attribute, .hljs-tag, .hljs-regexp, .ruby
+        .hljs-constant, .xml .hljs-tag .hljs-title, .xml .hljs-pi, .xml
+        .hljs-doctype, .html .hljs-doctype, .css .hljs-id, .css
+        .hljs-class, .css .hljs-pseudo)) {
+    color: #dd464c;
+  }
+  &
+    :where(pre)
+    :global(:where(.hljs-number, .hljs-preprocessor, .hljs-built_in, .hljs-literal, .hljs-params, .hljs-constant)) {
+    color: #fd8b19;
+  }
+  &
+    :where(pre)
+    :global(:where(.ruby .hljs-class .hljs-title, .css
+        .hljs-rules
+        .hljs-attribute)) {
+    color: #fdcc59;
+  }
+  &
+    :where(pre)
+    :global(:where(.hljs-string, .hljs-value, .hljs-inheritance, .hljs-header, .ruby
+        .hljs-symbol, .xml .hljs-cdata)) {
+    color: #8fc13e;
+  }
+  & :where(pre) :global(:where(.css .hljs-hexcolor)) {
+    color: #149b93;
+  }
+  &
+    :where(pre)
+    :global(:where(.hljs-function, .python .hljs-decorator, .python
+        .hljs-title, .ruby .hljs-function .hljs-title, .ruby
+        .hljs-title
+        .hljs-keyword, .perl .hljs-sub, .javascript .hljs-title, .coffeescript
+        .hljs-title)) {
+    color: #1290bf;
+  }
+
+  & :where(pre) :global(:where(.hljs-keyword, .javascript .hljs-function)) {
+    color: #c85e7c;
+  }
+  & :where(pre) :global(:where(.hljs)) {
+    display: block;
+    background: #322931;
+    color: #b9b5b8;
+    padding: 0.5em;
+    font-size: 16px;
+    line-height: 1.375;
+    direction: ltr;
+    text-align: left;
+    word-spacing: normal;
+  }
+  &
+    :where(pre)
+    :global(:where(.coffeescript .javascript, .javascript .xml, .tex
+        .hljs-formula, .xml .javascript, .xml .vbscript, .xml .css, .xml
+        .hljs-cdata)) {
+    opacity: 0.5;
   }
 }
