feat: Moving rank to the sidebar component

--- a/packages/shared/src/components/RankProgress.module.css
+++ b/packages/shared/src/components/RankProgress.module.css
@@ -39,6 +39,10 @@
   }
 }
 
+.smallVersion {
+  font-size: 2rem;
+}
+
 .radialProgress {
   font-size: inherit;
   --radial-progress-step: var(--theme-label-disabled);
