--- a/packages/shared/src/components/RankProgress.module.css
+++ b/packages/shared/src/components/RankProgress.module.css
@@ -43,6 +43,10 @@
   font-size: 2rem;
 }
 
+.smallVersionClosed {
+  font-size: 1.85rem;
+}
+
 .radialProgress {
   font-size: inherit;
   --radial-progress-step: var(--theme-label-disabled);
