fix: responsive modal class selector prioritization

--- a/packages/shared/src/components/modals/ResponsiveModal.module.css
+++ b/packages/shared/src/components/modals/ResponsiveModal.module.css
@@ -10,7 +10,7 @@
     }
   }
 
-  & :global(.modal) {
+  & :global(.modal):global(.responsive) {
     position: absolute;
     max-width: 30rem;
     min-height: 100%;
