refactor: article page classes

--- a/packages/shared/src/components/utilities.module.css
+++ b/packages/shared/src/components/utilities.module.css
@@ -16,11 +16,7 @@
   }
 }
 
-.newCommentContainer {
-  max-width: $pageMaxWidth;
-}
-
-.pageSidebar {
+.pageWidgets {
   max-width: $pageMaxWidth;
 }
 
