--- a/packages/shared/src/components/cards/Card.module.css
+++ b/packages/shared/src/components/cards/Card.module.css
@@ -1,7 +1,3 @@
-.title {
-  word-break: break-word;
-}
-
 .blur {
   filter: blur(1.25rem);
 }
@@ -43,17 +39,19 @@
 
 .flag {
   will-change: transform;
-  z-index: 0;
+  z-index: -1;
   transition: transform 0.1s linear;
 }
 
-.cardContainer:hover .flag, .flag:hover {
+.cardContainer:hover .flag,
+.flag:hover {
   transform: none;
   z-index: 1;
   transition: transform 0.1s linear, z-index 0.1s step-end;
 }
 
-.header > a, .header > button {
+.header > a,
+.header > button {
   margin: 0 0.375rem;
 }
 
