fix: cleanup tailwind classes (#836)
Cleanup tailwind classes

--- a/packages/shared/src/styles/utilities.css
+++ b/packages/shared/src/styles/utilities.css
@@ -24,3 +24,10 @@
     display: none; /* Chrome, Safari and Opera */
   }
 }
+
+.break-words {
+  word-break: break-word;
+}
+.break-words-overflow {
+  overflow-wrap: break-word;
+}
