--- a/packages/shared/src/components/fields/TextField.module.css
+++ b/packages/shared/src/components/fields/TextField.module.css
@@ -3,6 +3,11 @@
     box-shadow: inset 0.125rem 0 0 0 var(--theme-label-primary);
   }
 
+  &:read-only:global(.focused) {
+    box-shadow: inset 0.125rem 0 0 0 var(--theme-focus);
+    border-color: var(--theme-focus);
+  }
+
   &:global(.focused) {
     box-shadow: inset 0.125rem 0 0 0 var(--theme-label-primary);
     border-color: var(--theme-label-primary);
