refactor: unnecessary additional classes

--- a/packages/shared/src/components/utilities.module.css
+++ b/packages/shared/src/components/utilities.module.css
@@ -16,7 +16,7 @@
   @screen laptop {
     width: $pageMaxWidth;
 
-    &:global(.sidebarRendered) {
+    &:global() {
       margin-left: calc(50% - (($pageMaxWidth / 2) - 3rem));
     }
   }
