fix: :bug: Added the new ranks modal styling

--- a/packages/shared/src/components/RankProgress.module.css
+++ b/packages/shared/src/components/RankProgress.module.css
@@ -4,7 +4,8 @@
   font-size: 3rem;
 
   &.enableColors {
-    &:hover, &.forceColor {
+    &:hover,
+    &.forceColor {
       & .radialProgress {
         --radial-progress-completed-step: var(--rank-color);
       }
