--- a/packages/shared/src/styles/base.css
+++ b/packages/shared/src/styles/base.css
@@ -64,25 +64,33 @@ body {
 
   --theme-overlay-quaternary: theme('colors.overlay.quaternary.white');
 
-  --theme-rank-1-color: theme('colors.burger.40');
-  --theme-rank-1-color-top: theme('colors.burger.40');
-  --theme-rank-1-color-bottom: theme('colors.bun.40');
+  --theme-rank-1-color: theme('colors.avocado.40');
+  --theme-rank-1-color-top: theme('colors.avocado.40');
+  --theme-rank-1-color-bottom: theme('colors.cheese.40');
 
-  --theme-rank-2-color: theme('colors.salt.40');
-  --theme-rank-2-color-top: #ffffff;
-  --theme-rank-2-color-bottom: theme('colors.salt.40');
+  --theme-rank-2-color: theme('colors.burger.40');
+  --theme-rank-2-color-top: theme('colors.burger.40');
+  --theme-rank-2-color-bottom: theme('colors.bun.40');
 
-  --theme-rank-3-color: theme('colors.cheese.40');
-  --theme-rank-3-color-top: theme('colors.cheese.40');
-  --theme-rank-3-color-bottom: theme('colors.bun.40');
+  --theme-rank-3-color: theme('colors.salt.40');
+  --theme-rank-3-color-top: #ffffff;
+  --theme-rank-3-color-bottom: theme('colors.salt.40');
 
-  --theme-rank-4-color: theme('colors.blueCheese.40');
-  --theme-rank-4-color-top: theme('colors.water.40');
-  --theme-rank-4-color-bottom: theme('colors.blueCheese.40');
+  --theme-rank-4-color: theme('colors.cheese.40');
+  --theme-rank-4-color-top: theme('colors.cheese.40');
+  --theme-rank-4-color-bottom: theme('colors.bun.40');
 
-  --theme-rank-5-color: theme('colors.cabbage.40');
-  --theme-rank-5-color-top: theme('colors.cabbage.40');
-  --theme-rank-5-color-bottom: theme('colors.onion.40');
+  --theme-rank-5-color: theme('colors.blueCheese.40');
+  --theme-rank-5-color-top: theme('colors.water.40');
+  --theme-rank-5-color-bottom: theme('colors.blueCheese.40');
+
+  --theme-rank-6-color: theme('colors.cabbage.40');
+  --theme-rank-6-color-top: theme('colors.cabbage.40');
+  --theme-rank-6-color-bottom: theme('colors.onion.40');
+
+  --theme-rank-7-color: theme('colors.ketchup.40');
+  --theme-rank-7-color-top: theme('colors.ketchup.40');
+  --theme-rank-7-color-bottom: theme('colors.cabbage.40');
 
   --theme-highlight-comment: theme('colors.salt.10');
   --theme-highlight-red: theme('colors.ketchup.20');
@@ -150,25 +158,33 @@ body {
 
   --theme-overlay-quaternary: theme('colors.overlay.quaternary.pepper');
 
-  --theme-rank-1-color: theme('colors.burger.60');
-  --theme-rank-1-color-top: theme('colors.burger.60');
-  --theme-rank-1-color-bottom: theme('colors.bun.60');
+  --theme-rank-1-color: theme('colors.avocado.60');
+  --theme-rank-1-color-top: theme('colors.avocado.60');
+  --theme-rank-1-color-bottom: theme('colors.cheese.60');
 
-  --theme-rank-2-color: theme('colors.pepper.60');
-  --theme-rank-2-color-top: theme('colors.salt.90');
-  --theme-rank-2-color-bottom: theme('colors.pepper.60');
+  --theme-rank-2-color: theme('colors.burger.60');
+  --theme-rank-2-color-top: theme('colors.burger.60');
+  --theme-rank-2-color-bottom: theme('colors.bun.60');
 
-  --theme-rank-3-color: theme('colors.cheese.60');
-  --theme-rank-3-color-top: theme('colors.cheese.60');
-  --theme-rank-3-color-bottom: theme('colors.bun.60');
+  --theme-rank-3-color: theme('colors.pepper.60');
+  --theme-rank-3-color-top: theme('colors.salt.90');
+  --theme-rank-3-color-bottom: theme('colors.pepper.60');
 
-  --theme-rank-4-color: theme('colors.blueCheese.60');
-  --theme-rank-4-color-top: theme('colors.water.60');
-  --theme-rank-4-color-bottom: theme('colors.blueCheese.60');
+  --theme-rank-4-color: theme('colors.cheese.60');
+  --theme-rank-4-color-top: theme('colors.cheese.60');
+  --theme-rank-4-color-bottom: theme('colors.bun.60');
 
-  --theme-rank-5-color: theme('colors.cabbage.60');
-  --theme-rank-5-color-top: theme('colors.cabbage.60');
-  --theme-rank-5-color-bottom: theme('colors.onion.60');
+  --theme-rank-5-color: theme('colors.blueCheese.60');
+  --theme-rank-5-color-top: theme('colors.water.60');
+  --theme-rank-5-color-bottom: theme('colors.blueCheese.60');
+
+  --theme-rank-6-color: theme('colors.cabbage.60');
+  --theme-rank-6-color-top: theme('colors.cabbage.60');
+  --theme-rank-6-color-bottom: theme('colors.onion.60');
+
+  --theme-rank-7-color: theme('colors.ketchup.60');
+  --theme-rank-7-color-top: theme('colors.ketchup.60');
+  --theme-rank-7-color-bottom: theme('colors.cabbage.60');
 
   --theme-highlight-comment: theme('colors.pepper.10');
   --theme-highlight-red: theme('colors.ketchup.80');
