--- a/packages/shared/src/components/modals/NewRankModal.module.css
+++ b/packages/shared/src/components/modals/NewRankModal.module.css
@@ -54,6 +54,8 @@ $badgeOffset: 1.875rem;
 }
 
 .radialProgress {
+  width: $largeRadialProgressSize;
+  height: $largeRadialProgressSize;
   font-size: $radialProgressSize;
   --radial-progress-step: var(--rank-color);
   @screen responsiveModalBreakpoint {
