fix: rank modal ui concerns (#877)
* refactor: placeholder modal tag

* fix: radial completed step

* fix: disabled devcard

* fix: tooltip

* fix: is radial progress at modal

* fix: :bug: Added the loading state

* fix: :bug: Made the text dynamic

* fix: :rotating_light: Fix lint issue

* refactor: sign up button when unregistered

* fix: lint issue

* fix: button and text color

* refactor: devcard placeholder color prefix

* refactor: explicit definition for color changes

* fix: devcard limit to utilize flagsmith

Co-authored-by: Chris Bongers <chrisbongers@gmail.com>

--- a/packages/shared/src/components/RadialProgress.module.css
+++ b/packages/shared/src/components/RadialProgress.module.css
@@ -15,5 +15,9 @@
     transform-origin: center;
     transition: stroke-dashoffset 0.5s ease-out
       var(--radial-progress-transition-delay);
+
+    &:global(.primary) {
+      stroke: var(--theme-label-primary);
+    }
   }
 }
