fix: :bug: Fix the rotate of the radial progress

--- a/packages/shared/src/components/RankProgress.module.css
+++ b/packages/shared/src/components/RankProgress.module.css
@@ -49,6 +49,7 @@
 }
 
 .radialProgress {
+  transform: rotate(180deg);
   font-size: inherit;
   --radial-progress-step: var(--theme-label-disabled);
   --radial-progress-completed-step: var(--theme-label-disabled);
