feat: dailyfest - gamification (#860) (#862)
We added new ranks to the users experience and changed how ranks behave.

Co-authored-by: Aya Berdyeva <33021204+ayadotdev@users.noreply.github.com>
Co-authored-by: Lee Hansel Solevilla <sshanzel@yahoo.com>
Co-authored-by: Ido Shamun <ido@daily.dev>

--- a/packages/shared/src/components/RadialProgress.module.css
+++ b/packages/shared/src/components/RadialProgress.module.css
@@ -1,7 +1,6 @@
 .radialProgress {
-  width: 1em;
-  height: 1em;
   font-size: 3rem;
+  transform: rotate(180deg);
 }
 
 .circle {
@@ -16,6 +15,10 @@
     transform: rotate(90deg);
     transform-origin: center;
     transition: stroke-dashoffset 0.5s ease-out
-    var(--radial-progress-transition-delay);
+      var(--radial-progress-transition-delay);
+
+    &:global(.primary) {
+      stroke: var(--theme-label-primary);
+    }
   }
 }
