feat: companion styling and functions

--- a/packages/extension/views/companion.html
+++ b/packages/extension/views/companion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class='companion'>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://res.cloudinary.com" />
     <link rel="preconnect" href="https://api.daily.dev" />
   </head>
-  <body>
+  <body class='companion'>
     <noscript>
       <strong
         >We're sorry but extension doesn't work properly without JavaScript
